--- a/Kyas Mobile Wallet/res/values/strings.xml
+++ b/Kyas Mobile Wallet/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="New_Address">New address</string>
     <string name="refresh">Refresh</string>
     <string name="splash_logo">Splash logo</string>
+    <string name="block">Block</string>
 </resources>
